--- a/i/css/diginfo.css
+++ b/i/css/diginfo.css
@@ -1,6 +1,8 @@
 * {
 	padding: 0px;
 	margin: 0px;
+	color: #616161;
+	font-weight: bold;
 }
 
 #diginfoiconsep {
@@ -67,6 +69,7 @@
 	position: absolute;
 	top: 70px;
 	left: 158px;
+	color: black;
 	font: bold 17px Courier, monospace;
 }
 
@@ -275,6 +278,15 @@ body div header ul li {
 	font-size: 1.2em;
 	font-weight: 600;
 	padding-left: 20px;
+	padding-top: 20px;
+	padding-bottom: 15px;
+	clear: left;
+}
+
+.headlinesectionsnopadding {
+	color: #6476b3;
+	font-size: 1.2em;
+	font-weight: 600;
 	padding-top: 20px;
 	padding-bottom: 15px;
 	clear: left;
